# sls3_mcu_bridge

./: .clang-tidy  .codechecker.yaml  .codechecker_skipfile.txt  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  codechecker.yml
src/: CMakeLists.txt  bridge.cpp  bridge.hpp  client.cpp  client.hpp  main.cpp  mididevice.cpp  mididevice.hpp  new_package.cpp  new_package.hpp  package.cpp  package.hpp  parser.cpp  parser.hpp
tests/: .clang-tidy  CMakeLists.txt  test_package.cpp  test_parser.cpp  test_unit_new_package.cpp  test_unit_package.cpp
